# fightclub

./: .env.example  .gitignore  .vercelignore  README.md  admin.html  arena.css  arena.html  arena.js  arena_combat.js  arena_fight.html  arena_setup.sql  auth.js  auth_supabase.js  check_credits.js  combat_engine.js  create_inventory_table.sql  escrow_client.js  game.html  generate_metadata.js  import_real_data.js  index.html  landing.html  lang.js  leaderboard.html  login.html  nft.html  package-lock.json  package.json  profile.html  provably_fair.js  script.js  store.html  store_marble.css  style.css  supabaseClient.js  supabase_custom_users.sql  supabase_orders.sql  supabase_setup.sql  supabase_wallet_auth_migration.sql  test_db.js  (+2 more)
.superstack/: build-context.md  idea-context.md
api/: check-payment.js  create-payment.js
api/arena/: bot-pulse.js  cancel-fight.js  commit-round.js  create-fight.js  handle-timeout.js  join-fight.js  resolve-fight.js  reveal-round.js
assets/: metadata.json
programs/fight_escrow/: Anchor.toml  Cargo.toml
programs/fight_escrow/src/: lib.rs
simulation/: arena_bot.js  package-lock.json  package.json  simulate.js
solana-pay-server/: package-lock.json  package.json  server.js
