[package]
name = "fight-escrow"
version = "0.1.0"
description = "CyberPollo Arena — On-Chain Fight Escrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fight_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
